--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -47,10 +47,11 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
     <script src="{{ STATICURL }}/theme/js/skel-panels.min.js"></script>
     
     <link rel="stylesheet" href="{{ STATICURL }}/theme/css/pygment.css" />
-
-    <link rel="stylesheet" href="{{ STATICURL }}/theme/css/skel-noscript.css" />
-    <link rel="stylesheet" href="{{ STATICURL }}/theme/css/style.css" />
-    <link rel="stylesheet" href="{{ STATICURL }}/theme/css/style-desktop.css" />
+    <noscript>
+        <link rel="stylesheet" href="{{ STATICURL }}/theme/css/skel-noscript.css" />
+        <link rel="stylesheet" href="{{ STATICURL }}/theme/css/style.css" />
+        <link rel="stylesheet" href="{{ STATICURL }}/theme/css/style-desktop.css" />
+    </noscript>
     {% endblock head %}    
 </head>
 <body class="{% block bodyclass %}{% if page_name == 'index' %}homepage{% endif %}{% endblock %}">
@@ -181,6 +182,35 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
             </div>
         </div>
     <!-- /Footer Wrapper -->
+<script>
+        window._skel_config = {
+            preset: 'standard',
+            prefix: '{{ STATICURL }}/theme/css/style',
+            resetCSS: true,
+            breakpoints: {
+                'desktop': {
+                    grid: {
+                        gutters: 50
+                    }
+                }
+            }
+        };
 
+        window._skel_panels_config = {
+            preset: 'standard'
+        };
+
+        jQuery(function() {
+            $('#nav > ul').dropotron({
+                offsetY: -17,
+                offsetX: -1,
+                mode: 'fade',
+                noOpenerFade: true,
+                detach: false
+            });
+        });
+
+
+</script>
 </body>
 </html>
