--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -13,12 +13,23 @@
     <!-- <h3><a href="{{ SITEURL }}/articles/">Recent articles</a></h3> -->
     {% for article in articles_page.object_list %} 
     <article>
-      {% if article.link %}
-        <h3 class="link-article"><a href="{{ article.link }}" title="{{ article.title|striptags }}">{{ article.title }}</a> <a href="{{ article.link }}" target="_blank" title="{{ article.title|striptags }}"><i class="fa fa-link"></i></h3>
-      {% else %}
+    {% if article.link %}
+        <h3 class="link-article"><a href="{{ article.link }}" title="{{ article.title|striptags }}">{{ article.title }} {% if article.type and article.type == 'publication' %}<i class="fa fa-book"></i>{% endif %}</a> <a href="{{ article.link }}" target="_blank" title="{{ article.title|striptags }}"><i class="fa fa-link"></i></a></h3>
+
+         {% if article.type and article.type == 'publication' %}
+            <p class="byline"><strong>{% for author in article.authors %}{{ author }}{% if not loop.last %}, {% endif %}{% endfor %}</strong>. Published in <a href="{{ article.link }}">{{ article.journal }}</a> on <time datetime="{{ article.date.isoformat() }}">{{ article.date|strftime("%B %d, %Y") }}</time>
+            {% if article.doi %}<a href="http://dx.doi.org/{{ article.doi }}">doi:{{ article.doi }}</a> {% endif %}
+            {% if article.pmid %}<a href="http://www.ncbi.nlm.nih.gov/pubmed/{{ article.pmid }}">pmid:{{ article.pmid }}</a> {% endif %}
+            {% if article.isbn %}isbn:{{ article.isbn }} {% endif %}</p>
+
+            <p>{{ article.content }}</p>
+
+         {% endif %}
+        
+    {% else %}
         <h3><a href="{{ SITEURL }}/{{ article.url }}" title="{{ article.title|striptags }}">{{ article.title }}</a> <small>{{ article.date.strftime('%d.%m.%Y') }}</small></h3>
         <p>{{ article.summary|striptags }}</p>
-      {% endif %}
+    {% endif %}
     </article>
     <hr />
     {% endfor %}
