--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -24,7 +24,7 @@
   <article class="post">
     <div class="headline-wrap">
       {% if article.link %}
-        <h1><a href="{{ article.link }}">{{ article.title }} <i class="fa fa-link"></i></a></h1>
+        <h1><a href="{{ article.link }}">{{ article.title }}</a></h1>
       {% else %}
         <h1><a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark" title="{{ article.title|striptags }}">{{ article.title }}</a></h1>
       {% endif %}
