--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -38,7 +38,7 @@
         <p class="paginator">
         {% if articles_page.has_previous() %}
         {% if articles_page.previous_page_number() == 1 %}
-        <a href="{{ SITEURL }}/{{ page_name }}.html#content">&laquo;</a>
+        <a href="{{ SITEURL }}/{{ page_name }}#content">&laquo;</a>
         {% else %}
         <a href="{{ SITEURL }}/{{ page_name }}index{{ articles_page.previous_page_number() }}.html#content">&laquo;</a>
         {% endif %}
