--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -64,7 +64,7 @@
 
 
 {% include '_scripts.html' %}
-{% block disqus %}{% endblock %}
+{% block comments %}{{ article.metadata.googleplus_comments }}{% endblock %}
 {% block github %}{% endblock %}
 </body>
 </html>
