--- a/theme/templates/_navigation.html
+++ b/theme/templates/_navigation.html
@@ -21,7 +21,7 @@
             {% if DISPLAY_CATEGORIES_ON_MENU %}
             <ul>
                 {% for cat, null in categories %}
-                {% if cat not in ['publications','conferences'] %}<li class="{% if cat == category %} active{% endif %}"><a href="{{ SITEURL }}/{{ cat.url }}">{{ cat }} <span class="hilite">({{ null|length }})</span></a></li>{% endif %}
+                {% if cat not in ['publications','conferences','meta'] %}<li class="{% if cat == category %} active{% endif %}"><a href="{{ SITEURL }}/{{ cat.url }}">{{ cat }} <span class="hilite">({{ null|length }})</span></a></li>{% endif %}
                 {% endfor %}
             </ul>
             {% endif %}
