--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -14,7 +14,7 @@
     {% for article in articles_page.object_list %} 
     <article class="{% if article.image %}article-with-image{% endif %}">
         {% if article.image %}
-            <a href="{% if article.link %}{{ article.link }}{% else %}{{ SITEURL }}/{{ article.url }}{% endif %}" target="_blank" title="{{ article.title|striptags }}">
+            <a {% if article.link %}href="{{ article.link }}" target="_blank"{% else %}href="{{ SITEURL }}/{{ article.url }}"{% endif %} title="{{ article.title|striptags }}">
                 <img src="{{ article.image }}" class="article-image">
             </a>
         {% endif %}
